--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "files": [
             "src/Cli.php",
             "src/Engine.php",
-            "src/Games/Even.php"
+            "src/Games/Even.php",
+            "src/Games/Calc.php"
           ]
     },
     "authors": [
@@ -19,7 +20,8 @@
     ],
 	"bin": [
 		"bin/brain-games",
-		"bin/brain-even"
+		"bin/brain-even",
+		"bin/brain-calc"
 	],
 	"license": "MIT",
     "require": {
