--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
             "src/Engine.php",
             "src/Games/Even.php",
             "src/Games/Calc.php",
-            "src/Games/GCD.php"
+            "src/Games/GCD.php",
+            "src/Games/Progression.php"
           ]
     },
     "authors": [
@@ -23,7 +24,8 @@
         "bin/brain-games",
         "bin/brain-even",
         "bin/brain-calc",
-        "bin/brain-gcd"
+        "bin/brain-gcd",
+        "bin/brain-progression"
 	],
 	"license": "MIT",
     "require": {
