--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
             "src/Games/Even.php",
             "src/Games/Calc.php",
             "src/Games/GCD.php",
-            "src/Games/Progression.php"
+            "src/Games/Progression.php",
+            "src/Games/Prime.php"
           ]
     },
     "authors": [
@@ -25,7 +26,8 @@
         "bin/brain-even",
         "bin/brain-calc",
         "bin/brain-gcd",
-        "bin/brain-progression"
+        "bin/brain-progression",
+        "bin/brain-prime"
 	],
 	"license": "MIT",
     "require": {
