--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,8 @@
 {
     "name": "hexlet/code",
-	"description": "Description for composer",
-	"autoload": {
-		"psr-4": {
-			"BrainGames\\": "src/"
-		},
+    "description": "hexlet php-package",
+    "license": "MIT",
+    "autoload": {
         "files": [
             "src/Cli.php",
             "src/Engine.php",
@@ -13,7 +11,7 @@
             "src/Games/GCD.php",
             "src/Games/Progression.php",
             "src/Games/Prime.php"
-          ]
+        ]
     },
     "authors": [
         {
@@ -21,19 +19,18 @@
             "email": "0resama@mail.ru"
         }
     ],
-	"bin": [
+    "bin": [
         "bin/brain-games",
         "bin/brain-even",
         "bin/brain-calc",
         "bin/brain-gcd",
         "bin/brain-progression",
         "bin/brain-prime"
-	],
-	"license": "MIT",
+    ],
     "require": {
-		"php": ">=7.4",
+        "php": ">=7.4",
         "wp-cli/php-cli-tools": "^0.12.1"
-	},
+    },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.12"
     }
